@startuml
abstract class Figura{
+ {abstract} calcularArea(): double
+ mostrarArea(): void
}

class Circulo{
- radio: double
- PI : double = 3.141592

+ Circulo(radio: double)
+ mostrarArea(): double
}

class Rectangulo{
- base: double
- altura: double

+ Rectangulo(base: double, altura:double)
+ calcularArea(): double
}

Figura <|-- Circulo
Figura <|-- Rectangulo
@enduml